# LuxeMineERP

./: .gitignore  CMakeLists.txt  resources.qrc
src/: main.cpp
src/accountant/: castinglistwidget.cpp  castinglistwidget.h  castingwidget.cpp  castingwidget.h  metalpurchasedialog.cpp  metalpurchasedialog.h  metalpurchasewidget.cpp  metalpurchasewidget.h  stocklistwidget.cpp  stocklistwidget.h  stockwidget.cpp  stockwidget.h
src/admin/: changepassworddialog.cpp  changepassworddialog.h  dashboardwidget.cpp  dashboardwidget.h  usercreationwidget.cpp  usercreationwidget.h  viewuserswidget.cpp  viewuserswidget.h
src/auth/: authservice.cpp  authservice.h  loginwindow.cpp  loginwindow.h
src/common/: AppStyle.h  goldweightcalculator.cpp  goldweightcalculator.h  sessionmanager.cpp  sessionmanager.h
src/dashboards/: accountantwindow.cpp  accountantwindow.h  addcatalog.cpp  addcatalog.h  adminwindow.cpp  adminwindow.h  designerwindow.cpp  designerwindow.h  manufacturerwindow.cpp  manufacturerwindow.h  modifycatalog.cpp  modifycatalog.h  sellerwindow.cpp  sellerwindow.h
src/database/: databasemanager.cpp  databasemanager.h  databaseutils.cpp  databaseutils.h  userrepository.cpp  userrepository.h
src/designer/: addcatalog.cpp  designerorderlistwidget.cpp  designerorderlistwidget.h  jewelrymenu.cpp  jewelrymenu.h
src/manufacturer/: diamonissueretbrodialog.cpp  diamonissueretbrodialog.h  jobsheetwidget.cpp  jobsheetwidget.h  jobslistwidget.cpp  jobslistwidget.h  managegolddialog.cpp  managegolddialog.h
src/models/: CastingListRow.h  JobSheetData.h  OrderData.h  OrderStatusData.h  User.h  UserPaymentView.h  imageclicklabel.cpp  imageclicklabel.h
src/seller/: orderdialog.cpp  orderdialog.h  orderlistwidget.cpp  orderlistwidget.h
ui/: accountant.ui  addcatalog.ui  admin.ui  changepassword.ui  dashboard.ui  designer.ui  designerorderlist.ui  diamonissueretbro.ui  jobsheet.ui  jobslist.ui  login.ui  managegold.ui  manufacturer.ui  modifycatalog.ui  order.ui  seller.ui  stock.ui  stocklist.ui  usercreation.ui  viewusers.ui
